--- a/home.html
+++ b/home.html
@@ -23,7 +23,8 @@
 				<ul>
                     <li class="current"><a href="home.html">Home</a></li>
                     <li><a href="index.html">Sign Up</a></li>
-					<li><a href="https://google.com">Exit >></a></li>
+					<li><button>Color >>
+                        </button></li>
 						
 				</ul>
 			</nav>
@@ -41,6 +42,16 @@
 
     </section>
 
-    
+    <script>
+        document.querySelector("button").addEventListener("click", function(){
+            document.body.style.background = randCol(); })
+
+        function randCol(){
+            return '#' + (function co(lor){     return (lor += 
+                [0,1,2,3,4,5,6,7,8,9,'A','B','C','D','E','F'][Math.floor(Math.random()*16)])
+                    && (lor.length == 6) ? lor : co(lor); 
+            })('');
+        }
+    </script>
 </body>
 </html>
